fixing alignment on tech stack section for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,7 @@ a:hover, a:focus, a:active, a:visited, a:link{
   .technologies {
     width: 100%;
     font-size: 10px;
-    padding-left: 20px;
+    padding-left: 40px;
   }
   #recent-projects {
     display: none;
